Continue implementing entry form

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: #e0f0bb;
+    --primary-dark: #50612e;
     --primary-foreground: rgba(224, 240, 187, 0.65);
     --secondary: #673ab7;
     --secondary-foreground: 0 0% 9%;
