--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,6 +103,7 @@
 body {
   font-family: "Ubuntu";
 
+  background-color: #e0f0bb;
   background-image: url("/background_2.jpeg");
   background-size: cover;
   background-attachment: fixed;
